@@ -23,9 +23,9 @@
         <maven-failsafe-plugin.version>3.0.0-M7</maven-failsafe-plugin.version>
 
         <lombok.version>1.18.24</lombok.version>
-        <slf4j.version>2.0.0-beta1</slf4j.version>
+        <slf4j.version>2.0.0</slf4j.version>
         <webdriver-overload.version>2.0.6-SNAPSHOT</webdriver-overload.version>
-        <serenity.version>3.3.2</serenity.version>
+        <serenity.version>3.3.4</serenity.version>
         <cucumber.version>7.4.1</cucumber.version>
     </properties>
 
@@ -96,7 +96,7 @@
                     <excludes>
                         <include>**/*ITs.java</include>
                     </excludes>
-                    <testFailureIgnore>true</testFailureIgnore>
+<!--                    <testFailureIgnore>true</testFailureIgnore>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -107,7 +107,6 @@
                     <argLine>
                         -Xmx1024m
                         -Dfile.encoding=UTF-8
-                        --illegal-access=permit
                     </argLine>
                     <includes>
                         <include>**/*ITs.java</include>
